--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.tencent.fit</groupId>
+	<groupId>com.github.alishtory</groupId>
 	<artifactId>cos_api</artifactId>
-	<version>5.1.6</version>
+	<version>5.1.7</version>
 	<packaging>jar</packaging>
 	<name>cos-java-sdk</name>
 	<description>qcloud cos sdk for inner tencentyun</description>
@@ -160,6 +160,11 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
+						<configuration>
+							<gpgArguments>
+								<gpgArgument>--no-tty</gpgArgument>
+							</gpgArguments>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
